WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75612
WTF::String: Inline method shouldn't have WTF_EXPORT_PRIVATE
https://bugs.webkit.org/show_bug.cgi?id=75612
Summary
WTF::String: Inline method shouldn't have WTF_EXPORT_PRIVATE
Hajime Morrita
Reported
2012-01-05 02:35:59 PST
Inline methods cannot have any visible linkages. Thus they shouldn't be marked as WTF_EXPORT_PRIVATE. This is a series of nit-picking for making
Bug 72855
build-able.
Attachments
Patch
(4.26 KB, patch)
2012-01-05 02:39 PST
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2012-01-05 02:39:51 PST
Created
attachment 121247
[details]
Patch
Alexey Proskuryakov
Comment 2
2012-01-05 09:27:57 PST
FWIW, this was added in
bug 27551
, which looks like an original of
bug 72855
.
Hajime Morrita
Comment 3
2012-01-05 23:43:03 PST
(In reply to
comment #2
)
> FWIW, this was added in
bug 27551
, which looks like an original of
bug 72855
.
Alexey, thanks for checking this! Actually this is why we are switching from hand-crafted annotation to automated annotation. With a tool's help, the annotation can be more precise. This bug was also found during the investigation to see why generated annotations wasn't built.
WebKit Review Bot
Comment 4
2012-01-06 00:04:43 PST
Comment on
attachment 121247
[details]
Patch Clearing flags on attachment: 121247 Committed
r104270
: <
http://trac.webkit.org/changeset/104270
>
WebKit Review Bot
Comment 5
2012-01-06 00:04:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug