WTF::String: Inline method shouldn't have WTF_EXPORT_PRIVATE https://bugs.webkit.org/show_bug.cgi?id=75612

Patch by Hajime Morrita <morrita@chromium.org> on 2012-01-06
Reviewed by Kevin Ollivier.

* wtf/text/WTFString.h:
(WTF::String::findIgnoringCase):
(WTF::String::append):
(WTF::String::fromUTF8):
(WTF::String::fromUTF8WithLatin1Fallback):
(WTF::String::isHashTableDeletedValue):

Canonical link: https://commits.webkit.org/92482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104270 268f45cc-cd09-0410-ab3c-d52691b4dbfc